[package]
name = "epsx-database"
version.workspace = true
edition.workspace = true

[dependencies]
epsx-kernel = { path = "../kernel" }
epsx-config = { path = "../config" }
sqlx.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
async-trait.workspace = true
