[package]
name = "epsx-kernel"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
alloy-primitives.workspace = true
chrono.workspace = true
thiserror.workspace = true
uuid.workspace = true
async-trait.workspace = true
tracing.workspace = true
tokio.workspace = true
regex = "1.10"
