[package]
name = "epsx-web3"
version.workspace = true
edition.workspace = true

[dependencies]
epsx-kernel = { path = "../kernel" }
epsx-config = { path = "../config" }
alloy.workspace = true
alloy-provider.workspace = true
alloy-network.workspace = true
alloy-primitives.workspace = true
alloy-sol-types.workspace = true
alloy-contract.workspace = true
alloy-signer-local.workspace = true
alloy-transport-http.workspace = true
alloy-rpc-types.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
hex.workspace = true
url.workspace = true
reqwest.workspace = true
