[package]
name = "epsx-auth"
version.workspace = true
edition.workspace = true

[dependencies]
epsx-crypto = { path = "../crypto" }
epsx-kernel = { path = "../kernel" }
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true
tracing.workspace = true
http.workspace = true
thiserror.workspace = true
chrono.workspace = true
async-trait.workspace = true
